# sludgewire

./: .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: api.py  auth.py  backfill.py  db.py  email_service.py  fec_lookup.py  fec_parse.py  feeds.py  ingest_f3x.py  ingest_ie.py  ingest_sa.py  repo.py  schemas.py  settings.py
app/templates/: base.html  config.html  dashboard_3x.html  dashboard_date.html  dashboard_e.html
scripts/: backfill_opponents.py  backfill_party.py  backfill_sa.py  debug_db.py  ingest_comms.py  ingest_job.py  ingest_ptr.py  latest_sha.sh  load_industries.py  monitor.sh  reset_db.py  seed.py  test_insert.py  test_sa_parse.py
sludgewire/: access.py  house_helpers.py  house_parsers.py  house_updater.py  senate_helpers.py  senate_updater.py
sludgewire23/: helpers.py  parse_helpers.py  senate_helpers.py  senate_updater.py  updater.py
tests/: conftest.py  test_basic.py  test_email.py  test_house_scraper.py  test_ingestion.py  test_ptr.py  test_scraper.py  test_senate_scraper.py
